--- a/p5WebsiteTest/p5WebsiteTest.csproj
+++ b/p5WebsiteTest/p5WebsiteTest.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Pages\NewFolder\**" />
+    <Compile Remove="Pages\WaveMachine\NewFolder\**" />
+    <Content Remove="Pages\NewFolder\**" />
+    <Content Remove="Pages\WaveMachine\NewFolder\**" />
+    <EmbeddedResource Remove="Pages\NewFolder\**" />
+    <EmbeddedResource Remove="Pages\WaveMachine\NewFolder\**" />
+    <None Remove="Pages\NewFolder\**" />
+    <None Remove="Pages\WaveMachine\NewFolder\**" />
+  </ItemGroup>
+
 </Project>
